--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Professional Portfolio - Developer & Designer</title>
+    <title>Professional Portfolio - Software Developer</title>
     <meta name="description" content="Explore my portfolio showcasing cutting-edge web development projects, technical skills, and professional experience. Discover innovative solutions and creative designs." />
     <meta property="og:title" content="Professional Portfolio - Developer & Designer" />
     <meta property="og:description" content="Explore my portfolio showcasing cutting-edge web development projects, technical skills, and professional experience." />
